# lightpad

./: .gitignore  .gitmodules  .oclint  .travis.yml  CMakeLists.txt  Colors.cpp  Colors.cpp.template  Colors.h  Colors_template.cpp  Display.cpp  Display.h  DisplayPanel.cpp  DisplayPanel.h  DisplayPanel_old.cpp  FilePanel.cpp  FilePanel.h  GenerateNoteButtonMap.cpp  Helpers.cpp  Helpers.h  IDs.h  Makefile  Old_Makefile.make  Project.cpp  Project.h  PropertiesPanel.cpp  PropertiesPanel.h  README.md  TimelinePanel.cpp  TimelinePanel.h  buildandrun.sh  colors  doxygen.conf  doxygen.conf.in  lightpad  lightpad.cbp  lightpad.depend  lightpad.layout  mac_info.plist.in  main.cpp  midi  (+6 more)
CMakeModules/: FindGooCore.cmake  FindGraphicsMagick.cmake  FindHOWL.cmake  FindLibMagic.cmake  FindNightwaveCore.cmake
graphics/icons/: icon.icns  lightpad.icns
graphicsmagick/include/GraphicsMagick/Magick++/: Drawable.h  Include.h  STL.h
graphicsmagick/include/GraphicsMagick/magick/: blob.h  color.h  common.h  constitute.h  draw.h  image.h  list.h  log.h  magick.h  magick_config.h  memory.h  module.h  monitor.h  pixel_cache.h  render.h  symbols.h  utility.h  version.h
graphicsmagick/include/GraphicsMagick/wand/: wand_api.h  wand_symbols.h
graphicsmagick/lib/: libGraphicsMagick++.12.dylib  libGraphicsMagick++.dylib  libGraphicsMagick++.la  libGraphicsMagick.3.dylib  libGraphicsMagick.dylib  libGraphicsMagick.la  libGraphicsMagickWand.2.dylib  libGraphicsMagickWand.dylib  libGraphicsMagickWand.la
graphicsmagick/lib/pkgconfig/: GraphicsMagick++.pc  GraphicsMagick.pc  GraphicsMagickWand.pc
graphicsmagick/share/doc/GraphicsMagick/: ChangeLog  NEWS.txt
graphicsmagick/share/doc/GraphicsMagick/www/: ChangeLog-2017.html  Changelog.html  Changes.html  Copyright.html  FAQ.html  GraphicsMagick.html  Hg.html  INSTALL-unix.html  INSTALL-windows.html  ImageMagickObject.html  NEWS.html  OpenMP.html  README.html  authors.html  benchmarks.html  contribute.html  download.html  formats.html  gm.html  index.html  links.html  miff.html  mission.html  motion-picture.html  perl.html  process.html  programming.html  project.html  quantize.html  reference.html  security.html  thanks.html  tools.html  utilities.html  version.html
graphicsmagick/share/doc/GraphicsMagick/www/Magick++/: Blob.html  CoderInfo.html  Color.html  Drawable.html  Enumerations.html  Exception.html  FormatCharacters.html  Geometry.html  Image.html  ImageDesign.html  Montage.html  PixelPacket.html  Pixels.html  TypeMetric.html  index.html
graphicsmagick/share/doc/GraphicsMagick/www/api/: api.html  types.html
graphicsmagick/share/man/man1/: gm.1
include/midifile/: Binasc.h  MidiEvent.h  MidiEventList.h  MidiFile.h  MidiMessage.h  Options.h
include/rtmidi/: RtMidi.h  rtmidi_c.h
lib/: librtmidi.dylib  librtmidi.la
lib/midifile-master/: Makefile.library  Makefile.win-library
lib/midifile-master/src-library/: Binasc.cpp
lib/rtmidi-2.1.1/: RtMidi.cpp  RtMidi.h
lib/rtmidi-2.1.1/lib/: librtmidi.def  rtmidi.lib
lib/rtmidi-2.1.1/msw/: UpgradeLog.htm  rtmidilib.cbp  rtmidilib.depend  rtmidilib.sln  rtmidilib.vcxproj  rtmidilib.vcxproj.filters
lib/rtmidi-2.1.1/msw/Release/rtmidilib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  rtmidilib.lastbuildstate
libraries/: libmidifile.dylib
licenses/: libmidifile.txt  librtmidi.txt
references/: Button Coordinates.txt  Light_Output_Test.mid  citations.txt  macos_lib_otool_results.txt
references/Launchpad Lightshow MIDI Editor Web Viewer/: Application.js  Application1.js  Application2.js  index.html
references/Launchpad Lightshow MIDI Editor Web Viewer/Resources/: screen-0.js  style.css
references/citations/: vinyldarkscratch.txt
scripts/: CompleteBundle.cmake.in  CreateBundle.sh.in  fixup_one_path.sh
src/: CMakeLists.txt  Colors.cpp  Colors.cpp.in  Colors.h  Colors_template.cpp  DCHelpers.cpp  DCHelpers.h  DisplayPanel.cpp  DisplayPanel.h  ElementIDs.h  FileMetadata.cpp  FileMetadata.h  FilePanel.cpp  FilePanel.h  GenerateNoteButtonMap.cpp  GridRenderer.cpp  GridRenderer.h  Helpers.cpp  Helpers.h  Launchpad.cpp  Launchpad.h  Layer.cpp  Layer.h  LightpadProject.cpp  LightpadProject.h  MagickBlit.cpp  MidiLayer.cpp  MidiLayer.h  NoteHelpers.cpp  NoteHelpers.h  Project.cpp  Project.h  PropertiesPanel.cpp  PropertiesPanel.h  QuickFilePanel.cpp  QuickFilePanel.h  SplashScreen.cpp  SplashScreen.h  StartupProject.cpp  StartupProject.h  (+12 more)
src/tests/: HelpersTest.h
tests/: HelpersTest.h
